--- a/clinique_app/templates/base/header.html
+++ b/clinique_app/templates/base/header.html
@@ -32,9 +32,13 @@
                 <a class="nav-link" href="/contacts">Контакты</a>
             </li>
             <li class="call-us-block">
-                <img src="{% static 'img/whatsapp-green.png' %}" alt="Whatsapp">
-                <img src="{% static 'img/phone-blue.png' %}" alt="Phone">
-                <a class="nav-link" href="#">8 (495) 342-56-05</a>
+                <a href="https://api.whatsapp.com/send?phone=447712127222">
+                    <img src="{% static 'img/whatsapp-green.png' %}" alt="Whatsapp">
+                </a>
+                <a class="nav-link" href="tel:84953425605">
+                    <img src="{% static 'img/phone-blue.png' %}" alt="Phone">
+                </a>
+                <a class="nav-link" href="tel:84953425605">8 (495) 342-56-05</a>
             </li>
         </ul>
     </div>
