--- a/clinique_app/templates/_contacts.html
+++ b/clinique_app/templates/_contacts.html
@@ -45,8 +45,12 @@
                                     <span>+7 (495) 162-51-93</span>
                                 </div>
                                 <div class="media">
-                                    <img src="{% static 'img/instagram.png' %}" alt="Instagram">
-                                    <img src="{% static 'img/facebook.png' %}" alt="Facebook">
+                                    <a href="https://instagram.com">
+                                        <img src="{% static 'img/instagram.png' %}" alt="Instagram">
+                                    </a>
+                                    <a href="https://facebook.com">
+                                        <img src="{% static 'img/facebook.png' %}" alt="Facebook">
+                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -71,17 +75,21 @@
             </div>
         </div>
     </div>
-    <div class="callback-section">
+    <div class="callback-section" id="price_form">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 input-headers"><span>ЦЕНЫ НА ПРИЁМ ВРАЧА-ДЕРМАТОЛОГА, КОСМЕТОЛОГА, ЭНДОКРИНОЛОГА, ТРИХОЛОГА</span>
-                    <span>Индивидуально расскажем</span> <span>про каждую услугу</span></div>
+                <div class="col-lg-12 input-headers">
+                    <span>ЦЕНЫ НА ПРИЁМ ВРАЧА-ДЕРМАТОЛОГА, КОСМЕТОЛОГА, ЭНДОКРИНОЛОГА, ТРИХОЛОГА</span>
+                    <span>Индивидуально расскажем</span>
+                    <span>про каждую услугу</span>
+                </div>
                 <div class="col-lg-12 inputs-wrapper">
-                    <form action="">
-                        <input type="text" placeholder="ФИО*">
-                        <input type="text" placeholder="Телефон*">
-                        <input type="text" placeholder="Почта">
-                        <button class="cta-button">Записаться</button>
+                    <form method="post" action="">
+                    {% csrf_token %}
+                    {{ form_price.name }}
+                    {{ form_price.phone }}
+                    {{ form_price.email }}
+                        <button class="cta-button" type="submit" value="Submit" name="price_form">Записаться</button>
                     </form>
                     <p>Я соглашаюсь на обработку персональных данных и с <a href="" style="color: #4f9c50;">политикой
                         конфиденциальности</a></p>
