--- a/clinique_app/templates/_detailpromo.html
+++ b/clinique_app/templates/_detailpromo.html
@@ -11,7 +11,12 @@
                         <li class="breadcrumb-item">
                             <a href="/">Главная</a>
                         </li>
-                        <li class="breadcrumb-item active" aria-current="page">Услуги</li>
+                        <li class="breadcrumb-item">
+                            <a href="/promo">Акции</a>
+                        </li>
+                        <li class="breadcrumb-item active" aria-current="page">
+                            {{ promo.post_title }}
+                        </li>
                     </ol>
                 </nav>
             </div>
@@ -21,71 +26,47 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 headers-wrapper">
-                    <span class="section-subHeader">Эффективная озонотерапия</span>
+                    <span class="section-subHeader">{{ promo.preview_title }}</span>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-12 content-wrapper">
-                    <div class="top-banner">
+                    <div class="top-banner" style="background-image: url('{{ promo.post_img.url }}')">
                         <div class="banner-text">
                             <div class="text-wrapper">
                                 <div class="green-promo">Акция</div>
                                 <span class="first-span">
                                     <span class="big-font-promo">Скидка</span>
-                                    <span class="green-colored-span">15%</span>
+                                    <span class="green-colored-span">{{ promo.preview_discount }}%</span>
                                     <span class="smaller-font-promo">на процедуры</span></span>
-                                    <span class="second-span"><span lass="green-colored-span">здоровье и красота</span>
-                                    <span class="last-span">ваших волос</span></span>
+                                <span class="second-span"><span class="green-colored-span">{{ promo.preview_discount_obj }}</span>
+                                    <!--                                    <span class="last-span">ваших волос</span></span>-->
                             </div>
                         </div>
                     </div>
                     <div class="main-info">
-                        <h3>Озонотерапия волос</h3>
-                        <p>Применение медицинского озона в современной косметологии (озонотерапия) обусловлено рядом
-                            уникальных биологических особенностей данного вещества, позволяющих быстро и в достаточной
-                            степени эффективно бороться с признаками преждевременного старения кожи, а также другими
-                            дерматологическими и эстетическими недостатками кожи и фигуры.</p>
-                        <p>Являясь аллотропной, впрочем, достаточно неустойчивой, модификацией кислорода, озон обладает
-                            мощной окисляющей активностью, из-за которой его причисляют к первому (наиболее опасному)
-                            классу токсических веществ. Однако озон, применяемый в терапевтических целях, специально
-                            очищенный и обогащенный кислородом, является эффективным средством для борьбы с морщинами,
-                            сухостью и дряблостью кожи, нарушением работы сальных желез и т. д. Озонотерапия как
-                            процедура терапевтического введения медицинского озона под кожу основана на понимании того
-                            факта, что в процессе выполнения своих функций, кожный покров испытывает хронический
-                            недостаток влаги и кислорода, что приводит к нарушению клеточного обмена и замедляет
-                            процессы регенерации тканей. Таким образом, в клетках задерживаются различные токсичные
-                            вещества, а отсутствие влаги ухудшает резистентность кожи и провоцирует появление морщин.
-                            Иммуностимулирующие и дезинфицирующие свойства озона способны оказывать корректирующее
-                            воздействие на клетки эпидермиса, стимулируя их интенсивное деление.</p>
+                        <h3>{{ promo.post_title }}</h3>
+                        <p>{{ promo.post_text }}</p>
                     </div>
                     <div class="results-section">
                         <h3>Результат</h3>
                         <div class="text-wrapper">
-                            <p>Уникальные свойства озона используются в косметологии и
-                            физиотерапии не первое десятилетие.</p>
+                            <p>{{ promo.post_result_uptext }}</p>
+
                             <ul>
-                                <li>В частности, широкое распространение получила инъекционная озонотерапия –
-                                    внутрикожные или подкожные микроинъекции смеси озона и кислорода
+                                {% for promo_result in promo_result_points %}
+                                <li>
+                                    {{ promo_result.post_result_point }}
                                 </li>
-                                <li>Метод по праву называют универсальным: озонотерапия может с одинаковым успехом
-                                    использоваться как для коррекции возрастных и эстетических проблем лица, так и для
-                                    борьбы с недостатками фигуры. Кроме того, озон активно применяют в трихологии для
-                                    лечения волос от выпадения (курс процедур помогает остановить их выпадение, делая
-                                    густыми и здоровыми)
-                                </li>
+                                {% endfor %}
                             </ul>
-                            <p>Длительность лечения или коррекции определяется индивидуально и зависит от характера и
-                                степени выраженности проблемы. Для омоложения кожи лица в большинстве случаев достаточно
-                                5-8 сеансов. Озонотерапия для похудения и борьбы с целлюлитом.</p>
+
+                            <p>{{ promo.post_result_downtext }}</p>
                         </div>
                     </div>
                     <div class="effects-section">
                         <h3>Эффект от процедуры</h3>
-                        <p>Красивые ухоженные волосы являются, пожалуй, вторым после лица и рук, признаком того,
-                            насколько тщательно женщина следит за своей внешностью. В нашей клинике существует
-                            специальная процедура для лечения не только волос, но и кожи головы – озонотерапия
-                            волосистой части головы. С помощью озона решаются большинство дерматологических и
-                            трихологических проблем.</p>
+                        <p>{{ promo.post_effect }}</p>
                     </div>
                 </div>
             </div>
@@ -112,41 +93,17 @@
                                             <span style="font-weight: bold">2 сессия</span>
                                         </div>
                                     </div>
+                                    {% for promo_price in promo_prices %}
                                     <div class="row custom-row">
-                                        <div class="col-lg-8">Озонотерапия лица</div>
+                                        <div class="col-lg-8">{{ promo_price.part_name }}</div>
                                         <div class="col-lg-2 white-col">
-                                            <span class="green-colored-div"><span class="mobile-only">1 сессия</span>1200 руб.</span>
+                                            <span class="green-colored-div"><span class="mobile-only">1 сессия</span>{{ promo_price.session_price1 }} руб.</span>
                                         </div>
                                         <div class="col-lg-2">
-                                            <span class="blue-colored-div"><span class="mobile-only">2 сессии</span>3300 руб.</span>
+                                            <span class="blue-colored-div"><span class="mobile-only">2 сессии</span>{{ promo_price.session_price2 }} руб.</span>
                                         </div>
                                     </div>
-                                    <div class="row custom-row">
-                                        <div class="col-lg-8">Озонотерапия шеи</div>
-                                        <div class="col-lg-2 white-col">
-                                            <span class="green-colored-div"><span class="mobile-only">1 сессия</span>1200 руб.</span>
-                                        </div>
-                                        <div class="col-lg-2">
-                                            <span class="blue-colored-div"><span class="mobile-only">2 сессии</span>3300 руб.</span>
-                                        </div>
-                                    </div>
-                                    <div class="row custom-row">
-                                        <div class="col-lg-8">Озонотерапия декольте</div>
-                                        <div class="col-lg-2 white-col">
-                                            <span class="green-colored-div"><span class="mobile-only">1 сессия</span>1200 руб.</span></div>
-                                        <div class="col-lg-2">
-                                            <span class="blue-colored-div"><span class="mobile-only">2 сессии</span>3300 руб.</span>
-                                        </div>
-                                    </div>
-                                    <div class="row custom-row pre-last">
-                                        <div class="col-lg-8">Озонотерапия лицо + шея</div>
-                                        <div class="col-lg-2 white-col">
-                                            <span class="green-colored-div"><span class="mobile-only">1 сессия</span>1200 руб.</span>
-                                        </div>
-                                        <div class="col-lg-2">
-                                            <span class="blue-colored-div"><span class="mobile-only">2 сессии</span>3300 руб.</span>
-                                        </div>
-                                    </div>
+                                    {% endfor %}
                                     <div class="row custom-row">
                                         <div class="col-lg-8"></div>
                                         <div class="col-lg-2 white-col"></div>
