--- a/clinique_app/templates/_promo.html
+++ b/clinique_app/templates/_promo.html
@@ -9,7 +9,7 @@
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb bg-transparent p-0">
                         <li class="breadcrumb-item"><a href="/">Главная</a></li>
-                        <li class="breadcrumb-item active" aria-current="page">Услуги</li>
+                        <li class="breadcrumb-item active" aria-current="page">Акции</li>
                     </ol>
                 </nav>
             </div>
@@ -18,166 +18,56 @@
     <div class="promo-page__promos-section">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 headers-wrapper"><span class="section-subHeader">Наши специалисты </span><span
-                        class="section-header">команда</span></div>
+                <div class="col-lg-12 headers-wrapper">
+                    <span class="section-subHeader">Наши акции </span><span class="section-header">выгодно</span>
+                </div>
             </div>
             <div class="row promo__wrapper">
+                {% for promo in promo_list %}
                 <div class="col-lg-4">
                     <div class="single-promo__wrapper">
-                        <div class="single-promo__header promo1">
-                            <div class="text-wrapper">
-                                <div>Акция</div>
-                                <span class="first-span">Скидка <span
-                                        class="colored-span">10%</span> на процедуры</span> <span
-                                    class="second-span"><span class="colored-span">инновационной</span> лазерной системы</span>
-                            </div>
-                        </div>
-                        <div class="single-promo__content"><span class="promo__date">6.11.2020</span><h5>Инновационная
-                            лазерная система</h5>
-                            <p>Для достижения желаемого результата достаточно 6 - 8 безболезненных процедур, проводимых
-                                с интервалом 1,5 - 2 месяца. С..</p><span><a href="#">Подробнее</a></span></div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="single-promo__wrapper">
-                        <div class="single-promo__header promo2">
-                            <div class="text-wrapper">
-                                <div>Акция</div>
-                                <span class="first-span">Специальная стомость</span> <span class="second-span"><span
-                                    class="colored-span">на лазерную</span> эпиляцию</span></div>
-                        </div>
-                        <div class="single-promo__content"><span class="promo__date">6.11.2020</span><h5>Безболезненная
-                            лазерная эпиляция</h5>
-                            <p>Озонотерапия поможет оздоровлению кожи головы и волос. Эффективность этой процедуры
-                                подтверждена клиническими..</p><span><a href="#">Подробнее</a></span></div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="single-promo__wrapper">
-                        <div class="single-promo__header promo3">
-                            <div class="text-wrapper">
-                                <div class="green-promo">Акция</div>
-                                <span class="first-span">Скидка <span class="green-colored-span">15%</span> на процедуры</span>
-                                <span class="second-span"><span class="green-colored-span">здоровье и красота</span> ваших волос</span>
-                            </div>
-                        </div>
-                        <div class="single-promo__content"><span class="promo__date">6.11.2020</span><h5>Эффективная
-                            озонотерапия</h5>
-                            <p>Новейшая технология лечения сосудистых поражений кожи у взрослых и детей на базе
-                                инновационной лазерной платформы Cutera...</p><span><a href="#">Подробнее</a></span>
+                        <div class="single-promo__header {% cycle 'promo1' 'promo2' 'promo3'%}" style="background-image: url('{{ promo.preview_img.url }}')">
+                        <div class="text-wrapper">
+                            <div class="{% cycle '' '' 'green-promo' %}">Акция</div>
+                            <span class="first-span">Скидка <span
+                                    class="{% cycle 'colored-span' 'colored-span' 'green-colored-span'%}">{{ promo.preview_discount }}%</span> на процедуры</span>
+                            <span class="second-span">{{ promo.preview_discount_obj }}</span>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="single-promo__wrapper">
-                        <div class="single-promo__header promo1">
-                            <div class="text-wrapper">
-                                <div>Акция</div>
-                                <span class="first-span">Скидка <span
-                                        class="colored-span">10%</span> на процедуры</span> <span
-                                    class="second-span"><span class="colored-span">инновационной</span> лазерной системы</span>
-                            </div>
-                        </div>
-                        <div class="single-promo__content"><span class="promo__date">6.11.2020</span><h5>Инновационная
-                            лазерная система</h5>
-                            <p>Для достижения желаемого результата достаточно 6 - 8 безболезненных процедур, проводимых
-                                с интервалом 1,5 - 2 месяца. С..</p><span><a href="#">Подробнее</a></span></div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="single-promo__wrapper">
-                        <div class="single-promo__header promo2">
-                            <div class="text-wrapper">
-                                <div>Акция</div>
-                                <span class="first-span">Специальная стомость</span> <span class="second-span"><span
-                                    class="colored-span">на лазерную</span> эпиляцию</span></div>
-                        </div>
-                        <div class="single-promo__content"><span class="promo__date">6.11.2020</span><h5>Безболезненная
-                            лазерная эпиляция</h5>
-                            <p>Озонотерапия поможет оздоровлению кожи головы и волос. Эффективность этой процедуры
-                                подтверждена клиническими..</p><span><a href="#">Подробнее</a></span></div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="single-promo__wrapper">
-                        <div class="single-promo__header promo3">
-                            <div class="text-wrapper">
-                                <div class="green-promo">Акция</div>
-                                <span class="first-span">Скидка <span class="green-colored-span">15%</span> на процедуры</span>
-                                <span class="second-span"><span class="green-colored-span">здоровье и красота</span> ваших волос</span>
-                            </div>
-                        </div>
-                        <div class="single-promo__content"><span class="promo__date">6.11.2020</span><h5>Эффективная
-                            озонотерапия</h5>
-                            <p>Новейшая технология лечения сосудистых поражений кожи у взрослых и детей на базе
-                                инновационной лазерной платформы Cutera...</p><span><a href="#">Подробнее</a></span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="single-promo__wrapper">
-                        <div class="single-promo__header promo1">
-                            <div class="text-wrapper">
-                                <div>Акция</div>
-                                <span class="first-span">Скидка <span
-                                        class="colored-span">10%</span> на процедуры</span> <span
-                                    class="second-span"><span class="colored-span">инновационной</span> лазерной системы</span>
-                            </div>
-                        </div>
-                        <div class="single-promo__content"><span class="promo__date">6.11.2020</span><h5>Инновационная
-                            лазерная система</h5>
-                            <p>Для достижения желаемого результата достаточно 6 - 8 безболезненных процедур, проводимых
-                                с интервалом 1,5 - 2 месяца. С..</p><span><a href="#">Подробнее</a></span></div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="single-promo__wrapper">
-                        <div class="single-promo__header promo2">
-                            <div class="text-wrapper">
-                                <div>Акция</div>
-                                <span class="first-span">Специальная стомость</span> <span class="second-span"><span
-                                    class="colored-span">на лазерную</span> эпиляцию</span></div>
-                        </div>
-                        <div class="single-promo__content"><span class="promo__date">6.11.2020</span><h5>Безболезненная
-                            лазерная эпиляция</h5>
-                            <p>Озонотерапия поможет оздоровлению кожи головы и волос. Эффективность этой процедуры
-                                подтверждена клиническими..</p><span><a href="#">Подробнее</a></span></div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="single-promo__wrapper">
-                        <div class="single-promo__header promo3">
-                            <div class="text-wrapper">
-                                <div class="green-promo">Акция</div>
-                                <span class="first-span">Скидка <span class="green-colored-span">15%</span> на процедуры</span>
-                                <span class="second-span"><span class="green-colored-span">здоровье и красота</span> ваших волос</span>
-                            </div>
-                        </div>
-                        <div class="single-promo__content"><span class="promo__date">6.11.2020</span><h5>Эффективная
-                            озонотерапия</h5>
-                            <p>Новейшая технология лечения сосудистых поражений кожи у взрослых и детей на базе
-                                инновационной лазерной платформы Cutera...</p><span><a href="#">Подробнее</a></span>
-                        </div>
+                    <div class="single-promo__content">
+                        <span class="promo__date">{{ promo.date }}</span>
+                        <h5>{{ promo.preview_title }}</h5>
+                        <p>{{ promo.preview_description}}..</p>
+                        <span><a href="{{ promo.get_absolute_url }}">Подробнее</a></span>
                     </div>
                 </div>
             </div>
+            {% endfor %}
         </div>
     </div>
-    <div class="callback-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 input-headers"><span>ЦЕНЫ НА ПРИЁМ ВРАЧА-ДЕРМАТОЛОГА, КОСМЕТОЛОГА, ЭНДОКРИНОЛОГА, ТРИХОЛОГА</span>
-                    <span>Индивидуально расскажем</span> <span>про каждую услугу</span></div>
-                <div class="col-lg-12 inputs-wrapper">
-                    <form action=""><input type="text" placeholder="ФИО*"> <input type="text" placeholder="Телефон*">
-                        <input type="text" placeholder="Почта">
-                        <button class="cta-button">Записаться</button>
-                    </form>
-                    <p>Я соглашаюсь на обработку персональных данных и с <a href="" style="color: #4f9c50;">политикой
-                        конфиденциальности</a></p></div>
+</div>
+<div class="callback-section" id="price_form">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 input-headers">
+                <span>ЦЕНЫ НА ПРИЁМ ВРАЧА-ДЕРМАТОЛОГА, КОСМЕТОЛОГА, ЭНДОКРИНОЛОГА, ТРИХОЛОГА</span>
+                <span>Индивидуально расскажем</span>
+                <span>про каждую услугу</span>
+            </div>
+            <div class="col-lg-12 inputs-wrapper">
+                <form method="post" action="">
+                    {% csrf_token %}
+                    {{ form_price.name }}
+                    {{ form_price.phone }}
+                    {{ form_price.email }}
+                    <button class="cta-button" type="submit" value="Submit" name="price_form">Записаться</button>
+                </form>
+                <p>Я соглашаюсь на обработку персональных данных и с <a href="" style="color: #4f9c50;">политикой
+                    конфиденциальности</a></p>
             </div>
         </div>
     </div>
+</div>
 </div>
 
 {% endblock %}
