--- a/clinique_app/templates/_staff.html
+++ b/clinique_app/templates/_staff.html
@@ -9,7 +9,7 @@
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb bg-transparent p-0">
                         <li class="breadcrumb-item"><a href="/">Главная</a></li>
-                        <li class="breadcrumb-item active" aria-current="page">Услуги</li>
+                        <li class="breadcrumb-item active" aria-current="page">Команда</li>
                     </ol>
                 </nav>
             </div>
@@ -45,20 +45,25 @@
             </div>
         </div>
     </div>
-    <div class="callback-section">
+    <div class="callback-section" id="price_form">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 input-headers"><span>ЦЕНЫ НА ПРИЁМ ВРАЧА-ДЕРМАТОЛОГА, КОСМЕТОЛОГА, ЭНДОКРИНОЛОГА, ТРИХОЛОГА</span>
-                    <span>Индивидуально расскажем</span> <span>про каждую услугу</span></div>
+                <div class="col-lg-12 input-headers">
+                    <span>ЦЕНЫ НА ПРИЁМ ВРАЧА-ДЕРМАТОЛОГА, КОСМЕТОЛОГА, ЭНДОКРИНОЛОГА, ТРИХОЛОГА</span>
+                    <span>Индивидуально расскажем</span>
+                    <span>про каждую услугу</span>
+                </div>
                 <div class="col-lg-12 inputs-wrapper">
-                    <form action="">
-                        <input type="text" placeholder="ФИО*">
-                        <input type="text" placeholder="Телефон*">
-                        <input type="text" placeholder="Почта">
-                        <button class="cta-button">Записаться</button>
+                    <form method="post" action="">
+                    {% csrf_token %}
+                    {{ form_price.name }}
+                    {{ form_price.phone }}
+                    {{ form_price.email }}
+                        <button class="cta-button" type="submit" value="Submit" name="price_form">Записаться</button>
                     </form>
                     <p>Я соглашаюсь на обработку персональных данных и с <a href="" style="color: #4f9c50;">политикой
-                        конфиденциальности</a></p></div>
+                        конфиденциальности</a></p>
+                </div>
             </div>
         </div>
     </div>
