--- a/clinique_app/templates/base/footer.html
+++ b/clinique_app/templates/base/footer.html
@@ -10,16 +10,24 @@
                 <span>Наши контактные данные </span>
                 <span><img src="{% static 'img/marker.png' %}" alt="Map marker"> м. Парк Победы, улица Генерала Ермолова, 2</span>
                 <span><img src="{% static 'img/clock.png' %}" alt="Clock"> ежедневно 10:00 - 22:00</span>
-                <span><img src="{% static 'img/phone.png' %}" alt="Phone"> +7 (495) 162-51-93</span>
+
+                <span><img src="{% static 'img/phone.png' %}" alt="Phone">+7 (495) 162-51-93</span>
+
                 <div class="social-icons">
-                    <img src="{% static 'img/instagram.png' %}" alt="Instagram">
-                    <img src="{% static 'img/facebook.png' %}" alt="Facebook">
+                    <a href="https://www.instagram.com/beautygene.clinic/">
+                        <img src="{% static 'img/instagram.png' %}" alt="Instagram">
+                    </a>
+                    <a href="https://www.facebook.com">
+                        <img src="{% static 'img/facebook.png' %}" alt="Facebook">
+                    </a>
                 </div>
                 <div class="btn-wrapper">
-                    <button class="cta-button">Запись</button>
-                    <button class="cta-button">
-                        <img src="{% static 'img/whatsapp-white.png' %}" alt="">
-                    </button>
+                    <button class="cta-button" data-toggle="modal" data-target="#exampleModalCenter">Запись</button>
+                    <a href="https://api.whatsapp.com/send?phone=447712127222">
+                        <button class="cta-button">
+                            <img src="{% static 'img/whatsapp-white.png' %}" alt="">
+                        </button>
+                    </a>
                 </div>
             </div>
             <div class="col-xs-12 col-md-7 map-wrapper">
@@ -67,9 +75,14 @@
                     <a class="nav-link" href="/contacts">Контакты</a>
                 </li>
                 <li class="call-us-block">
-                    <img src="{% static 'img/whatsapp-green.png' %}" alt="Whatsapp">
-                    <img src="{% static 'img/phone-blue.png' %}" alt="Phone">
-                    <a class="nav-link" href="#">8 (495) 342-56-05</a>
+                    <a href="https://api.whatsapp.com/send?phone=447712127222">
+                        <img src="{% static 'img/whatsapp-green.png' %}" alt="Whatsapp">
+                    </a>
+                    <a class="nav-link" href="tel:84953425605">
+                        <img src="{% static 'img/phone-blue.png' %}" alt="Phone">
+                    </a>
+                    <a class="nav-link" href="tel:84953425605">8 (495) 342-56-05</a>
+
                 </li>
             </ul>
         </div>
@@ -78,9 +91,50 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <p style="text-align: right; font-size: 10px;"><a href="https://www.divier.ru/" style="color: #4f9c50; text-decoration: underline">Создание сайта </a>ДиВиЕр</p>
+                    <p style="text-align: right; font-size: 10px;"><a href="https://www.divier.ru/"
+                                                                      style="color: #4f9c50; text-decoration: underline">Создание
+                        сайта </a>ДиВиЕр</p>
                 </div>
             </div>
         </div>
     </div>
 </footer>
+
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+     aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+            <div class="modal-body">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12 inputs-wrapper">
+                            <h2>Записаться на прием</h2>
+                            <form novalidate method="post" action="#">
+                                {% csrf_token %}
+                                {{ form_up.name }}
+                                {% csrf_token %}
+                                {{ form_up.phone }}
+                                {% csrf_token %}
+                                {{ form_up.email }}
+                                {% csrf_token %}
+                                {{ form_up.date }}
+                                {% csrf_token %}
+                                {{ form_up.service }}
+                                <button class="cta-button" type="submit" value="Submit" name="exampleModalCenter">
+                                    Записаться
+                                </button>
+                            </form>
+                            <p>Я соглашаюсь на обработку персональных данных и с <a href="" style="color: #4f9c50;">политикой
+                                конфиденциальности</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
